--- a/backend/frontend/src/App.css
+++ b/backend/frontend/src/App.css
@@ -7,7 +7,7 @@
   display: flex;
   flex-direction: column;
   flex-grow: 1;
-  max-width: 100rem;
+  max-width: 130rem;
 }
 
 .blob-container {
@@ -15,14 +15,14 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 50rem;
+  width: 70rem;
   position: relative;
 }
 
 #blobSvg1 {
   position: absolute;
-  top: 11rem;
-  right: -4rem;
+  top: 8rem;
+  right: -2rem;
 }
 
 #blobSvg2 {
@@ -33,6 +33,6 @@
 
 #blobSvg3 {
   position: absolute;
-  top: 22rem;
-  right: 19rem;
+  top: 7rem;
+  right: 0;
 }
